# openconstraint-mcp

./: .gitignore  .mcp.json  AGENTS.md  LICENSE  NOTICE  README.md  justfile  opencode.json  pyproject.toml
.codex/: config.toml
.github/workflows/: ci.yml
LICENSES/: openpyxl.txt  ortools.txt
docs/plans/: 2026-05-16-v0-skeleton.md  2026-05-18-install-runtime-linux-x86_64.md  2026-05-28-solve-minizinc-model-tool.md  2026-05-30-check-minizinc-model-tool.md  2026-05-30-find-unsat-core-tool.md  2026-05-31-path-based-minizinc-files.md  2026-05-31-solve-minizinc-model-inline-data.md
examples/australia_map_coloring/: model.mzc.mzn  model.mzn
examples/balanced_assignment/: model.mzn
examples/cpsat_python/: assignment.py  clinic_roster_checker.py  clinic_roster_sweep.py  graph_coloring.py  graph_coloring_checker.py  scheduling.py
examples/golomb_ruler/: .openconstraint-model.json  problem.md  solve-result.json
examples/job_shop/: checker.py  data_example.json  data_ft06.json  data_ft10.json  model.py  problem.txt
examples/nonogram/: .openconstraint-model.json  data.dzn  model.mzn  problem.md  solve-result.json
examples/social_golfers/: data.dzn  model.mzn
src/openconstraint_mcp/: __init__.py  cli.py  job_errors.py  jobs.py  mcp_descriptions.py  minizinc.py  portfolio.py  portfolio_jobs.py  proc.py  prompts.py  runtime.py  runtime_install.py  save_target.py  schemas.py  server.py
tests/: conftest.py  test_childproc.py  test_cli.py  test_cpsat_python_examples.py  test_examples_integration.py  test_examples_manifest.py  test_job_shop_checker.py  test_jobs.py  test_jobs_integration.py  test_minizinc.py  test_minizinc_files.py  test_minizinc_integration.py  test_portfolio.py  test_portfolio_integration.py  test_portfolio_jobs.py  test_proc.py  test_prompt_cpsat_examples.py  test_protocol_text_results.py  test_protocol_text_status.py  test_runtime.py  test_runtime_install.py  test_save_target.py  test_schemas.py  test_server.py  test_server_errors.py  test_server_metadata.py  test_server_ortools.py  test_server_progress.py  test_server_prompts.py  test_server_tools.py
tests/cpsat/: _helpers.py  test_constraints.py  test_core.py  test_import.py  test_objectives.py  test_schemas.py
tests/fixtures/: libreoffice_inventory.xlsx
tests/jobs/: test_diagnostics.py  test_portfolio.py  test_portfolio_registry.py  test_portfolio_registry_integration.py  test_registry.py  test_registry_integration.py
tests/minizinc/: helpers.py  test_artifacts.py  test_checker.py  test_core.py  test_diagnostics.py  test_files.py  test_integration.py  test_interface.py  test_stream.py  test_unsat_core.py
tests/pyexec/: test_checker.py  test_core.py  test_core_integration.py  test_diagnostics.py  test_eligibility.py  test_experiment.py  test_experiment_integration.py  test_import_boundary.py  test_jobs.py  test_jobs_integration.py  test_save.py  test_sweep.py  test_sweep_integration.py
tests/runtime_install/: test_archive.py  test_core.py  test_download.py  test_integration_macos.py  test_integration_windows.py
tests/schemas/: test_artifacts.py  test_cpsat.py  test_diagnostic_field_compat.py  test_diagnostics.py  test_minizinc.py  test_portfolio.py  (+2 more)
(+96 files in other folders)
