[project]
name = "openconstraint-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "KeLiu99", email = "166951411+KeLiu99@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "mcp[cli]>=1.27.1",
    "packaging>=26.2",
    "platformdirs>=4.9.6",
    "psutil>=7.2.2",
    "pydantic>=2.13.4",
    "rich>=15.0.0",
    "typer>=0.25.1",
]

[project.scripts]
openconstraint-mcp = "openconstraint_mcp:main"

[build-system]
requires = ["uv_build>=0.11.14,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.13",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -m 'not integration'"
markers = [
    "integration: requires a real managed MiniZinc runtime (excluded from `just check`; run with `just integration`)",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.12"
warn_unused_configs = true
disallow_untyped_defs = true
no_implicit_optional = true
ignore_missing_imports = true
